--- a/public/index.css
+++ b/public/index.css
@@ -20,6 +20,12 @@ h1 {
     font-kerning: 10px;
 }
 
+@media only screen and (max-width: 600px){
+    h1{
+        font-size: 30px;
+    }
+}
+
 footer {
     position: absolute;
     bottom: 0;
