--- a/public/index.css
+++ b/public/index.css
@@ -25,8 +25,8 @@ h1 {
         align-items: flex-start;
     }
     h1{
-        font-size: 30px;
-        margin-top: 50px;
+        font-size: 40px;
+        margin-top: 25%;
     }
 }
 
